{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "2523255b-e6ad-c86c-363f-123733e8ab96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tokyo-private-ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.self_owned_ami",
      "mode": "data",
      "type": "aws_security_group",
      "name": "be_security_id",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.self_owned_ami",
      "mode": "data",
      "type": "aws_security_group",
      "name": "fe_security_id",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.self_owned_ami",
      "mode": "data",
      "type": "aws_subnet",
      "name": "be_subnet",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.self_owned_ami",
      "mode": "data",
      "type": "aws_subnet",
      "name": "fe_subnet",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.self_owned_ami",
      "mode": "data",
      "type": "aws_vpc",
      "name": "tokyo_vpc",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tokyo-frontend",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo-igw",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:internet-gateway/igw-028fc3de6ed65bb13",
            "id": "igw-028fc3de6ed65bb13",
            "owner_id": "515149434592",
            "tags": {
              "Name": "tokyo Internet Gateway"
            },
            "tags_all": {
              "Name": "tokyo Internet Gateway"
            },
            "vpc_id": "vpc-0dd492f0c7652ccf0"
          },
          "dependencies": [
            "module.self_owned_ami.aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "tokyo-nacl",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:network-acl/acl-071b90d3c497d03a9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-071b90d3c497d03a9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "515149434592",
            "subnet_ids": [
              "subnet-040081f80cd2a62a6"
            ],
            "tags": {
              "Name": "tokyo-sg-0"
            },
            "tags_all": {
              "Name": "tokyo-sg-0"
            },
            "vpc_id": "vpc-0dd492f0c7652ccf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.self_owned_ami.aws_subnet.private",
            "module.self_owned_ami.aws_vpc.tokyo-vpc",
            "module.self_owned_ami.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:network-acl/acl-0e4f45c1c566cfd02",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0e4f45c1c566cfd02",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "515149434592",
            "subnet_ids": [
              "subnet-055aedee509a0cc5f"
            ],
            "tags": {
              "Name": "tokyo-sg-1"
            },
            "tags_all": {
              "Name": "tokyo-sg-1"
            },
            "vpc_id": "vpc-0dd492f0c7652ccf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.self_owned_ami.aws_subnet.private",
            "module.self_owned_ami.aws_vpc.tokyo-vpc",
            "module.self_owned_ami.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo-internet-route",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-028fc3de6ed65bb13",
            "id": "r-rtb-09f2d235cb722cf0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f2d235cb722cf0b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.self_owned_ami.aws_internet_gateway.tokyo-igw",
            "module.self_owned_ami.aws_route_table.tokyo-public-route",
            "module.self_owned_ami.aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-public-route",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:route-table/rtb-09f2d235cb722cf0b",
            "id": "rtb-09f2d235cb722cf0b",
            "owner_id": "515149434592",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tokyo Public Route Table"
            },
            "tags_all": {
              "Name": "tokyo Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd492f0c7652ccf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.self_owned_ami.aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-rt-association",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd456f6f6d7764cb",
            "route_table_id": "rtb-09f2d235cb722cf0b",
            "subnet_id": "subnet-040081f80cd2a62a6"
          },
          "dependencies": [
            "module.self_owned_ami.aws_route_table.tokyo-public-route",
            "module.self_owned_ami.aws_subnet.private",
            "module.self_owned_ami.aws_vpc.tokyo-vpc",
            "module.self_owned_ami.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057ccccadfe8a55fd",
            "route_table_id": "rtb-09f2d235cb722cf0b",
            "subnet_id": "subnet-055aedee509a0cc5f"
          },
          "dependencies": [
            "module.self_owned_ami.aws_route_table.tokyo-public-route",
            "module.self_owned_ami.aws_subnet.private",
            "module.self_owned_ami.aws_vpc.tokyo-vpc",
            "module.self_owned_ami.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-securitygroup",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:security-group/sg-038b0290062468a09",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-038b0290062468a09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231020101651338800000001",
            "name_prefix": "terraform-",
            "owner_id": "515149434592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg-0"
            },
            "tags_all": {
              "Name": "tokyo-sg-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd492f0c7652ccf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.self_owned_ami.aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:security-group/sg-0073760c23a97ba42",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0073760c23a97ba42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231020101651341000000002",
            "name_prefix": "terraform-",
            "owner_id": "515149434592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg-1"
            },
            "tags_all": {
              "Name": "tokyo-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd492f0c7652ccf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.self_owned_ami.aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:subnet/subnet-040081f80cd2a62a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040081f80cd2a62a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515149434592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-subnets-0"
            },
            "tags_all": {
              "Name": "tokyo-subnets-0"
            },
            "vpc_id": "vpc-0dd492f0c7652ccf0"
          },
          "dependencies": [
            "module.self_owned_ami.aws_vpc.tokyo-vpc",
            "module.self_owned_ami.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:subnet/subnet-055aedee509a0cc5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055aedee509a0cc5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515149434592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-subnets-1"
            },
            "tags_all": {
              "Name": "tokyo-subnets-1"
            },
            "vpc_id": "vpc-0dd492f0c7652ccf0"
          },
          "dependencies": [
            "module.self_owned_ami.aws_vpc.tokyo-vpc",
            "module.self_owned_ami.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.self_owned_ami",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "module.self_owned_ami.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:vpc/vpc-0dd492f0c7652ccf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ef12efc701c6a9c",
            "default_route_table_id": "rtb-0082a36dd659b1de4",
            "default_security_group_id": "sg-077552265cf50d4e8",
            "dhcp_options_id": "dopt-06030f7bc22e7377f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dd492f0c7652ccf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0082a36dd659b1de4",
            "owner_id": "515149434592",
            "tags": {
              "Name": "tokyo Virtual Private Cloud"
            },
            "tags_all": {
              "Name": "tokyo Virtual Private Cloud"
            }
          }
        }
      ]
    }
  ]
}